fix: limit the length of bookmark's title in detail page, avoid layout issues

--- a/bookmarks/styles/bookmark-details.css
+++ b/bookmarks/styles/bookmark-details.css
@@ -94,3 +94,9 @@
   flex-direction: column;
   gap: var(--unit-6);
 }
+
+.bookmark-title {
+  word-break: break-all;
+  overflow-wrap: break-word;
+  white-space: normal;
+}
